--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,21 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tailwindcss/forms": "^0.5.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.32",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
