--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.32",
     "web-vitals": "^2.1.4",
