--- a/server/.env
+++ b/server/.env
@@ -2,3 +2,4 @@ PORT = 8000
 URL_SERVER = http://localhost:8000
 CLIENT_URL = http://localhost:3000
 JWT_SECRET = phongtro123bydungbap
+CODE_SECRET = phongtro123
