--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.32",
+    "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
