handle navigate and render all post

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ URL_SERVER = http://localhost:8000
 CLIENT_URL = http://localhost:3000
 JWT_SECRET = phongtro123bydungbap
 CODE_SECRET = phongtro123
+LIMIT_PRODUCT = 6
