handle api create post, add cloudinary...

--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,8 @@ JWT_SECRET = phongtro123bydungbap
 CODE_SECRET = phongtro123
 LIMIT_PRODUCT = 6
 LIMIT_NEWS = 12
+
+# phai lay dung thong tin
+CLOUDINARY_NAME = dwk0s46jb
+CLOUDINARY_KEY = 138248714223829
+CLOUDINARY_SECRET = sQOJXVr9RjbSn25bhbiTD6dwlIg
