--- a/client/package.json
+++ b/client/package.json
@@ -11,15 +11,16 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.5.1",
     "clsx": "^2.0.0",
+    "moment": "^2.29.4",
     "rc-pagination": "^3.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.32",
     "use-react-router-breadcrumbs": "^4.0.1",
