--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,16 @@
 {
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "cloudinary": "^1.41.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-async-handler": "^1.2.0",
         "init": "^0.1.2",
         "jsonwebtoken": "^9.0.2",
+        "moment": "^2.29.4",
+        "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
         "mysql2": "^3.6.1",
         "nodemon": "^3.0.1",
         "sequelize": "^6.33.0",
