--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.32",
     "use-react-router-breadcrumbs": "^4.0.1",
     "web-vitals": "^2.1.4",
