--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
         "multer-storage-cloudinary": "^4.0.0",
         "mysql2": "^3.6.1",
         "nodemon": "^3.0.1",
+        "pg": "^8.11.3",
         "sequelize": "^6.33.0",
         "uniqid": "^5.4.0",
         "uuid": "^9.0.1"
@@ -26,7 +27,10 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon server.js",
-        "start": "node server.js"
+        "start": "nodemon server.js"
+    },
+    "engines": {
+        "node": ">=14.20.1"
     },
     "keywords": [],
     "author": "",
