--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,9 @@
     "devDependencies": {
         "sequelize-cli": "^6.6.1"
     },
+    "engines": {
+        "node": "18.x"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "nodemon server.js",
