--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.3",
     "react-leaflet": "^4.2.1",
     "react-loader-spinner": "^5.4.5",
     "react-redux": "^8.1.3",
