--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 PORT = 8000
 URL_SERVER = http://localhost:8000
+CLIENT__DEPLOY_URL = https://phongtro123-dungbap.netlify.app
 CLIENT_URL = http://localhost:3000
 JWT_SECRET = phongtro123bydungbap
 CODE_SECRET = phongtro123
@@ -7,7 +8,6 @@ LIMIT_PRODUCT = 6
 LIMIT_NEWS = 12
 
 # custom render
-
 DB_HOST = dpg-cl89pd2vokcc73atc0ug-a.singapore-postgres.render.com
 DB_NAME = db_phongtro123_q2kp
 DB_USERNAME = db_phongtro123_q2kp_user
